fix cluster issuer

--- a/infra/external-secrets/resources/clustersecretstore-azure-kv.yaml
+++ b/infra/external-secrets/resources/clustersecretstore-azure-kv.yaml
@@ -1,27 +1,17 @@
-apiVersion: external-secrets.io/v1
+# infra/external-secrets/resources/clustersecretstore-azure-kv.yaml
+apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
   name: azure-key-vault
 spec:
   provider:
     azurekv:
-      vaultUrl: https://homelab-kv.vault.azure.net
-      authType: ServicePrincipal
-      tenantId:
-        valueFrom:
-          secretKeyRef:
-            name: akv-eso-creds
-            namespace: external-secrets
-            key: tenantId
-      clientId:
-        valueFrom:
-          secretKeyRef:
-            name: akv-eso-creds
-            namespace: external-secrets
-            key: clientId
-      clientSecret:
-        valueFrom:
-          secretKeyRef:
-            name: akv-eso-creds
-            namespace: external-secrets
-            key: clientSecret
+      tenantId: ${AZURE_TENANT_ID}
+      vaultUrl: ${AZURE_VAULT_URL}
+      environmentType: ${AZURE_ENVIRONMENT}
+      clientId: ${AZURE_CLIENT_ID}
+      authSecretRef:
+        clientSecret:
+          name: akv-eso-creds
+          namespace: external-secrets
+          key: clientSecret
