fix version of secret

--- a/infra/external-secrets/resources/clustersecretstore-azure-kv.yaml
+++ b/infra/external-secrets/resources/clustersecretstore-azure-kv.yaml
@@ -1,5 +1,5 @@
 # infra/external-secrets/resources/clustersecretstore-azure-kv.yaml
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ClusterSecretStore
 metadata:
   name: azure-key-vault
