just hard code the secret store values

--- a/infra/external-secrets/store/clustersecretstore-azure-kv.yaml
+++ b/infra/external-secrets/store/clustersecretstore-azure-kv.yaml
@@ -6,10 +6,10 @@ metadata:
 spec:
   provider:
     azurekv:
-      tenantId: ${AZURE_TENANT_ID}
-      vaultUrl: ${AZURE_VAULT_URL}
-      environmentType: ${AZURE_ENVIRONMENT}
-      clientId: ${AZURE_CLIENT_ID}
+      tenantId: "41dff8ea-5523-4210-b3ef-29349f3fbe14"
+      vaultUrl: "https://kubesoar-homelab-67029.vault.azure.net/"
+      environmentType: "AzurePublicCloud"
+      clientId: "f5e3ef36-92bc-4b82-b23d-d72f47d6712f"
       authSecretRef:
         clientSecret:
           name: akv-eso-creds
