move client id to the auth secret ref too

--- a/infra/external-secrets/store/clustersecretstore-azure-kv.yaml
+++ b/infra/external-secrets/store/clustersecretstore-azure-kv.yaml
@@ -1,4 +1,3 @@
-# infra/external-secrets/resources/clustersecretstore-azure-kv.yaml
 apiVersion: external-secrets.io/v1
 kind: ClusterSecretStore
 metadata:
@@ -9,8 +8,12 @@ spec:
       tenantId: "41dff8ea-5523-4210-b3ef-29349f3fbe14"
       vaultUrl: "https://kubesoar-homelab-67029.vault.azure.net/"
       environmentType: "AzurePublicCloud"
-      clientId: "f5e3ef36-92bc-4b82-b23d-d72f47d6712f"
+      authType: ServicePrincipal
       authSecretRef:
+        clientId:
+          name: akv-eso-creds
+          namespace: external-secrets
+          key: clientId
         clientSecret:
           name: akv-eso-creds
           namespace: external-secrets
