use proper value

--- a/infra/external-secrets/store/clustersecretstore-azure-kv.yaml
+++ b/infra/external-secrets/store/clustersecretstore-azure-kv.yaml
@@ -7,7 +7,7 @@ spec:
     azurekv:
       tenantId: "41dff8ea-5523-4210-b3ef-29349f3fbe14"
       vaultUrl: "https://kubesoar-homelab-67029.vault.azure.net/"
-      environmentType: "AzurePublicCloud"
+      environmentType: "PublicCloud"
       authType: ServicePrincipal
       authSecretRef:
         clientId:
