fix key in secret

--- a/infra/external-secrets/store/clustersecretstore-azure-kv.yaml
+++ b/infra/external-secrets/store/clustersecretstore-azure-kv.yaml
@@ -13,8 +13,8 @@ spec:
         clientId:
           name: akv-eso-creds
           namespace: external-secrets
-          key: clientId
+          key: ClientID
         clientSecret:
           name: akv-eso-creds
           namespace: external-secrets
-          key: clientSecret
+          key: ClientSecret
