--- a/infra/external-secrets/store/clustersecretstore-azure-kv.yaml
+++ b/infra/external-secrets/store/clustersecretstore-azure-kv.yaml
@@ -6,7 +6,7 @@ spec:
   provider:
     azurekv:
       tenantId: "41dff8ea-5523-4210-b3ef-29349f3fbe14"
-      vaultUrl: "https://kubesoar-homelab-67029.vault.azure.net/"
+      vaultUrl: "https://kubesoar-homelab-67029.vault.azure.net"
       environmentType: "PublicCloud"
       authType: ServicePrincipal
       authSecretRef:
