--- a/clusters/homelab/kustomizations.yaml
+++ b/clusters/homelab/kustomizations.yaml
@@ -136,7 +136,22 @@ spec:
   interval: 10m
   dependsOn:
     - name: cert-manager
-  path: ./infra/metallb
+  path: ./infra/metallb/operator
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: core-metallb-resources
+  namespace: flux-system
+spec:
+  interval: 10m
+  dependsOn:
+    - name: cert-manager
+  path: ./infra/metallb/resources
   prune: true
   sourceRef:
     kind: GitRepository
