add quotes to all of the secrets

--- a/apps/fallbacksite/ingress.yaml
+++ b/apps/fallbacksite/ingress.yaml
@@ -11,7 +11,7 @@ spec:
     - hosts:
         - "${ROOT_DOMAIN}"
         - "${WILDCARD_DOMAIN}"
-      secretName: ${TLS_SECRET_NAME}
+      secretName: "${TLS_SECRET_NAME}"
   rules:
     - host: "${ROOT_DOMAIN}"
       http:
