--- a/apps/fallbacksite/ingress.yaml
+++ b/apps/fallbacksite/ingress.yaml
@@ -9,11 +9,11 @@ spec:
   ingressClassName: nginx
   tls:
     - hosts:
-        - "${ROOT_DOMAIN}"
-        - "${WILDCARD_DOMAIN}"
-      secretName: "${TLS_SECRET_NAME}"
+        - kubesoar.com
+        - "*.kubesoar.com"
+      secretName: fallbacksite-tls
   rules:
-    - host: "${ROOT_DOMAIN}"
+    - host: kubesoar.com
       http:
         paths:
           - path: /
@@ -23,7 +23,7 @@ spec:
                 name: fallback-nginx
                 port:
                   number: 80
-    - host: "${WILDCARD_DOMAIN}"
+    - host: "*.kubesoar.com"
       http:
         paths:
           - path: /
@@ -33,3 +33,4 @@ spec:
                 name: fallback-nginx
                 port:
                   number: 80
+
