--- a/infra/external-secrets/creds/externalsecret-azuredns-config.yaml
+++ b/infra/external-secrets/creds/externalsecret-azuredns-config.yaml
@@ -2,6 +2,39 @@ apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: azuredns-config
+  namespace: flux-system
+spec:
+  refreshInterval: 1h
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: azure-key-vault
+  target:
+    name: azuredns-config
+    creationPolicy: Owner
+    template:
+      type: Opaque
+  data:
+    - secretKey: client-id
+      remoteRef:
+        key: azuredns-client-id
+    - secretKey: client-secret
+      remoteRef:
+        key: azuredns-client-secret
+    - secretKey: subscription-id
+      remoteRef:
+        key: azuredns-subscription-id
+    - secretKey: tenant-id
+      remoteRef:
+        key: azuredns-tenant-id
+
+
+---
+
+
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: azuredns-config
   namespace: cert-manager
 spec:
   refreshInterval: 1h
