--- a/infra/external-secrets/creds/externalsecret-azuredns-config.yaml
+++ b/infra/external-secrets/creds/externalsecret-azuredns-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: azuredns-config
+  name: azuredns-config-flux-system
   namespace: flux-system
 spec:
   refreshInterval: 1h
@@ -34,7 +34,7 @@ spec:
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: azuredns-config
+  name: azuredns-config-cert-manager
   namespace: cert-manager
 spec:
   refreshInterval: 1h
