--- a/infra/external-secrets/creds/externalsecret-azuredns-config.yaml
+++ b/infra/external-secrets/creds/externalsecret-azuredns-config.yaml
@@ -14,16 +14,16 @@ spec:
     template:
       type: Opaque
   data:
-    - secretKey: client-id
+    - secretKey: client_id
       remoteRef:
         key: azuredns-client-id
-    - secretKey: client-secret
+    - secretKey: client_secret
       remoteRef:
         key: azuredns-client-secret
-    - secretKey: subscription-id
+    - secretKey: subscription_id
       remoteRef:
         key: azuredns-subscription-id
-    - secretKey: tenant-id
+    - secretKey: tenant_id
       remoteRef:
         key: azuredns-tenant-id
 
@@ -47,15 +47,15 @@ spec:
     template:
       type: Opaque
   data:
-    - secretKey: client-id
+    - secretKey: client_id
       remoteRef:
         key: azuredns-client-id
-    - secretKey: client-secret
+    - secretKey: client_secret
       remoteRef:
         key: azuredns-client-secret
-    - secretKey: subscription-id
+    - secretKey: subscription_id
       remoteRef:
         key: azuredns-subscription-id
-    - secretKey: tenant-id
+    - secretKey: tenant_id
       remoteRef:
         key: azuredns-tenant-id
