make background be false

--- a/infra/kyverno/policies/global/automatically-add-reloader-annotations.yaml
+++ b/infra/kyverno/policies/global/automatically-add-reloader-annotations.yaml
@@ -5,7 +5,7 @@ metadata:
   name: add-reloader-annotation
 spec:
   validationFailureAction: enforce
-  background: true
+  background: false
   rules:
     - name: add-reloader-annotation-to-deployments
       match:
