actually mask the value passed into the workflow

--- a/.github/workflows/create-keyvault-secret.yaml
+++ b/.github/workflows/create-keyvault-secret.yaml
@@ -35,7 +35,13 @@ jobs:
           subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
 
       - name: Mask secret value
-        run: echo "::add-mask::${{ github.event.inputs.secret_value }}"
+        uses: actions/github-script@v7
+        env:
+          SECRET_VALUE: ${{ github.event.inputs.secret_value }}
+        with:
+          script: |
+            core.setSecret(process.env.SECRET_VALUE)
+
 
       - name: Create or update secret in kubesoar-homelab-67029
         shell: bash
