refactor the workflow

--- a/.github/workflows/create-keyvault-secret.yaml
+++ b/.github/workflows/create-keyvault-secret.yaml
@@ -1,4 +1,4 @@
-name: Create or update Azure Key Vault secret
+name: Set Azure Key Vault secret
 
 on:
   workflow_dispatch:
@@ -20,12 +20,12 @@ permissions:
   contents: read
 
 jobs:
-  set-secret:
+  check-secret:
     runs-on: ubuntu-latest
-
     env:
       KV_NAME: kubesoar-homelab-67029
-
+    outputs:
+      exists: ${{ steps.check.outputs.exists }}
     steps:
       - name: Azure login (OIDC to UAMI)
         uses: azure/login@v2
@@ -34,40 +34,91 @@ jobs:
           tenant-id: ${{ vars.AZURE_TENANT_ID }}
           subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Mask secret value
+      - name: Mask inputs
         uses: actions/github-script@v7
-        env:
-          SECRET_VALUE: ${{ github.event.inputs.secret_value }}
         with:
           script: |
-            core.setSecret(process.env.SECRET_VALUE)
+            core.setSecret(`${{ github.event.inputs.secret_value }}`)
+            core.setSecret(`${{ github.event.inputs.secret_name }}`)
 
-
-      - name: Create or update secret in kubesoar-homelab-67029
+      - name: Check if secret exists
+        id: check
         shell: bash
-        env:
-          NAME: ${{ github.event.inputs.secret_name }}
-          VALUE: ${{ github.event.inputs.secret_value }}
-          UPDATE: ${{ github.event.inputs.update_if_exists }}
         run: |
           set -euo pipefail
-          echo "Vault: $KV_NAME"
-          echo "Secret: $NAME"
-
+          NAME='${{ github.event.inputs.secret_name }}'
           if az keyvault secret show --vault-name "$KV_NAME" --name "$NAME" >/dev/null 2>&1; then
-            if [ "$UPDATE" != "true" ]; then
-              echo "Secret exists and update_if_exists=false. Skipping."
-              exit 0
-            fi
-            echo "Secret exists. Creating new version."
+            echo "exists=true" >> "$GITHUB_OUTPUT"
+            echo "Secret exists."
           else
-            echo "Secret not found. Creating."
+            echo "exists=false" >> "$GITHUB_OUTPUT"
+            echo "Secret does not exist."
           fi
 
+  create-secret:
+    needs: check-secret
+    if: needs.check-secret.outputs.exists == 'false'
+    runs-on: ubuntu-latest
+    env:
+      KV_NAME: kubesoar-homelab-67029
+    steps:
+      - name: Azure login (OIDC to UAMI)
+        uses: azure/login@v2
+        with:
+          client-id: ${{ vars.AZURE_CLIENT_ID }}
+          tenant-id: ${{ vars.AZURE_TENANT_ID }}
+          subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Mask inputs
+        uses: actions/github-script@v7
+        with:
+          script: |
+            core.setSecret(`${{ github.event.inputs.secret_value }}`)
+            core.setSecret(`${{ github.event.inputs.secret_name }}`)
+
+      - name: Create secret
+        shell: bash
+        run: |
+          set -euo pipefail
+          NAME='${{ github.event.inputs.secret_name }}'
+          echo "Creating secret in $KV_NAME: $NAME"
           az keyvault secret set \
             --vault-name "$KV_NAME" \
             --name "$NAME" \
-            --value "$VALUE" \
+            --value '${{ github.event.inputs.secret_value }}' \
             --only-show-errors -o none
+          echo "Created."
 
-          echo "Done."
+  update-secret:
+    needs: check-secret
+    if: needs.check-secret.outputs.exists == 'true' && github.event.inputs.update_if_exists == 'true'
+    runs-on: ubuntu-latest
+    env:
+      KV_NAME: kubesoar-homelab-67029
+    steps:
+      - name: Azure login (OIDC to UAMI)
+        uses: azure/login@v2
+        with:
+          client-id: ${{ vars.AZURE_CLIENT_ID }}
+          tenant-id: ${{ vars.AZURE_TENANT_ID }}
+          subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Mask inputs
+        uses: actions/github-script@v7
+        with:
+          script: |
+            core.setSecret(`${{ github.event.inputs.secret_value }}`)
+            core.setSecret(`${{ github.event.inputs.secret_name }}`)
+
+      - name: Update secret (new version)
+        shell: bash
+        run: |
+          set -euo pipefail
+          NAME='${{ github.event.inputs.secret_name }}'
+          echo "Updating secret in $KV_NAME: $NAME"
+          az keyvault secret set \
+            --vault-name "$KV_NAME" \
+            --name "$NAME" \
+            --value '${{ github.event.inputs.secret_value }}' \
+            --only-show-errors -o none
+          echo "Updated."
