copy example from internet to see if this masking technique will work

--- a/.github/workflows/create-keyvault-secret.yaml
+++ b/.github/workflows/create-keyvault-secret.yaml
@@ -34,25 +34,25 @@ jobs:
           tenant-id: ${{ vars.AZURE_TENANT_ID }}
           subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
 
+      # Mask without using step env, pull from event payload
       - name: Mask inputs
-        uses: actions/github-script@v7
-        with:
-          script: |
-            core.setSecret(`${{ github.event.inputs.secret_value }}`)
-            core.setSecret(`${{ github.event.inputs.secret_name }}`)
+        shell: bash
+        run: |
+          NAME="$(jq -r '.inputs.secret_name' "$GITHUB_EVENT_PATH")"
+          VALUE="$(jq -r '.inputs.secret_value' "$GITHUB_EVENT_PATH")"
+          echo "::add-mask::$NAME"
+          echo "::add-mask::$VALUE"
 
       - name: Check if secret exists
         id: check
         shell: bash
         run: |
           set -euo pipefail
-          NAME='${{ github.event.inputs.secret_name }}'
+          NAME="$(jq -r '.inputs.secret_name' "$GITHUB_EVENT_PATH")"
           if az keyvault secret show --vault-name "$KV_NAME" --name "$NAME" >/dev/null 2>&1; then
             echo "exists=true" >> "$GITHUB_OUTPUT"
-            echo "Secret exists."
           else
             echo "exists=false" >> "$GITHUB_OUTPUT"
-            echo "Secret does not exist."
           fi
 
   create-secret:
@@ -69,23 +69,18 @@ jobs:
           tenant-id: ${{ vars.AZURE_TENANT_ID }}
           subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Mask inputs
-        uses: actions/github-script@v7
-        with:
-          script: |
-            core.setSecret(`${{ github.event.inputs.secret_value }}`)
-            core.setSecret(`${{ github.event.inputs.secret_name }}`)
-
       - name: Create secret
         shell: bash
         run: |
           set -euo pipefail
-          NAME='${{ github.event.inputs.secret_name }}'
-          echo "Creating secret in $KV_NAME: $NAME"
+          NAME="$(jq -r '.inputs.secret_name' "$GITHUB_EVENT_PATH")"
+          VALUE="$(jq -r '.inputs.secret_value' "$GITHUB_EVENT_PATH")"
+          echo "::add-mask::$NAME"
+          echo "::add-mask::$VALUE"
           az keyvault secret set \
             --vault-name "$KV_NAME" \
             --name "$NAME" \
-            --value '${{ github.event.inputs.secret_value }}' \
+            --value "$VALUE" \
             --only-show-errors -o none
           echo "Created."
 
@@ -103,22 +98,17 @@ jobs:
           tenant-id: ${{ vars.AZURE_TENANT_ID }}
           subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Mask inputs
-        uses: actions/github-script@v7
-        with:
-          script: |
-            core.setSecret(`${{ github.event.inputs.secret_value }}`)
-            core.setSecret(`${{ github.event.inputs.secret_name }}`)
-
       - name: Update secret (new version)
         shell: bash
         run: |
           set -euo pipefail
-          NAME='${{ github.event.inputs.secret_name }}'
-          echo "Updating secret in $KV_NAME: $NAME"
+          NAME="$(jq -r '.inputs.secret_name' "$GITHUB_EVENT_PATH")"
+          VALUE="$(jq -r '.inputs.secret_value' "$GITHUB_EVENT_PATH")"
+          echo "::add-mask::$NAME"
+          echo "::add-mask::$VALUE"
           az keyvault secret set \
             --vault-name "$KV_NAME" \
             --name "$NAME" \
-            --value '${{ github.event.inputs.secret_value }}' \
+            --value "$VALUE" \
             --only-show-errors -o none
           echo "Updated."
