make the new one the only enabled one

--- a/.github/workflows/create-keyvault-secret.yaml
+++ b/.github/workflows/create-keyvault-secret.yaml
@@ -34,7 +34,6 @@ jobs:
           tenant-id: ${{ vars.AZURE_TENANT_ID }}
           subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
 
-      # Mask without using step env, pull from event payload
       - name: Mask inputs
         shell: bash
         run: |
@@ -77,11 +76,20 @@ jobs:
           VALUE="$(jq -r '.inputs.secret_value' "$GITHUB_EVENT_PATH")"
           echo "::add-mask::$NAME"
           echo "::add-mask::$VALUE"
+
           az keyvault secret set \
             --vault-name "$KV_NAME" \
             --name "$NAME" \
             --value "$VALUE" \
             --only-show-errors -o none
+
+          # Disable ALL other versions (there won't be any on create, safe to run)
+          NEW_ID="$(az keyvault secret show --vault-name "$KV_NAME" --name "$NAME" --query id -o tsv)"
+          for VID in $(az keyvault secret list-versions --vault-name "$KV_NAME" --name "$NAME" --query "[].id" -o tsv); do
+            if [ "$VID" != "$NEW_ID" ]; then
+              az keyvault secret set-attributes --id "$VID" --enabled false --only-show-errors -o none
+            fi
+          done
           echo "Created."
 
   update-secret:
@@ -98,7 +106,7 @@ jobs:
           tenant-id: ${{ vars.AZURE_TENANT_ID }}
           subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Update secret (new version)
+      - name: Update secret (new version) and disable older ones
         shell: bash
         run: |
           set -euo pipefail
@@ -106,9 +114,18 @@ jobs:
           VALUE="$(jq -r '.inputs.secret_value' "$GITHUB_EVENT_PATH")"
           echo "::add-mask::$NAME"
           echo "::add-mask::$VALUE"
+
           az keyvault secret set \
             --vault-name "$KV_NAME" \
             --name "$NAME" \
             --value "$VALUE" \
             --only-show-errors -o none
+
+          # Make the newest version the only enabled one
+          NEW_ID="$(az keyvault secret show --vault-name "$KV_NAME" --name "$NAME" --query id -o tsv)"
+          for VID in $(az keyvault secret list-versions --vault-name "$KV_NAME" --name "$NAME" --query "[].id" -o tsv); do
+            if [ "$VID" != "$NEW_ID" ]; then
+              az keyvault secret set-attributes --id "$VID" --enabled false --only-show-errors -o none
+            fi
+          done
           echo "Updated."
