--- a/infra/keda/helmrelease.yaml
+++ b/infra/keda/helmrelease.yaml
@@ -14,7 +14,7 @@ spec:
         namespace: flux-system
       version: "*"
   install:
-    createNamespace: true
+    createNamespace: false
     remediation:
       retries: 3
   upgrade:
