--- a/infra/kubescape/helmrelease.yaml
+++ b/infra/kubescape/helmrelease.yaml
@@ -8,15 +8,16 @@ spec:
   chart:
     spec:
       chart: kubescape-operator
+      version: "1.29.10"
       sourceRef:
         kind: HelmRepository
         name: kubescape
         namespace: flux-system
-      version: "*"
   install:
-    createNamespace: false
+    crds: Create
     remediation:
       retries: 3
   upgrade:
+    crds: CreateReplace
     remediation:
       retries: 3
