--- a/infra/external-secrets/creds/externalsecret-tailscale-operator-oauth.yaml
+++ b/infra/external-secrets/creds/externalsecret-tailscale-operator-oauth.yaml
@@ -14,9 +14,9 @@ spec:
     template:
       type: Opaque
   data:
-    - secretKey: clientId
+    - secretKey: client_id
       remoteRef:
         key: tailscale-client-id
-    - secretKey: clientSecret
+    - secretKey: client_secret
       remoteRef:
         key: tailscale-client-secret
