--- a/clusters/homelab/kustomizations.yaml
+++ b/clusters/homelab/kustomizations.yaml
@@ -264,6 +264,26 @@ spec:
     kind: GitRepository
     name: flux-system
 
+
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: tailscale-resources
+  namespace: flux-system
+spec:
+  interval: 10m
+  dependsOn:
+    - name: cert-manager
+  path: ./clusters/homelab/tailscale
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+
+
+
+
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
