--- a/clusters/homelab/kustomizations.yaml
+++ b/clusters/homelab/kustomizations.yaml
@@ -411,19 +411,19 @@ spec:
   dependsOn:
     - name: cert-manager
 
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: kubescape
-  namespace: flux-system
-spec:
-  interval: 10m
-  path: ./infra/kubescape
-  prune: true
-  wait: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  dependsOn:
-    - name: cert-manager
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: kubescape
+#   namespace: flux-system
+# spec:
+#   interval: 10m
+#   path: ./infra/kubescape
+#   prune: true
+#   wait: true
+#   sourceRef:
+#     kind: GitRepository
+#     name: flux-system
+#   dependsOn:
+#     - name: cert-manager
