add kube version override

--- a/infra/harbor/helmrelease.yaml
+++ b/infra/harbor/helmrelease.yaml
@@ -29,5 +29,6 @@ spec:
         className: tailscale
       hosts:
         core: harbor
+      kubeVersionOverride: "1.33.5"
     notary:
       enabled: false
