--- a/infra/harbor/helmrelease.yaml
+++ b/infra/harbor/helmrelease.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: harbor
-      version: "1.18.0"
+      version: "*"
       sourceRef:
         kind: HelmRepository
         name: harbor
