--- a/infra/harbor/helmrelease.yaml
+++ b/infra/harbor/helmrelease.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: harbor
-      version: "*"
+      version: "1.18.0"
       sourceRef:
         kind: HelmRepository
         name: harbor
@@ -27,8 +27,9 @@ spec:
         enabled: true
       ingress:
         className: tailscale
-      hosts:
-        core: harbor
-      kubeVersionOverride: "1.33.5"
+        annotations:
+          tailscale.com/hostname: harbor
+        kubeVersionOverride: "1.33.5"
     notary:
       enabled: false
+    externalURL: "https://harbor.tailc27027.ts.net"
