change core host name

--- a/infra/harbor/helmrelease.yaml
+++ b/infra/harbor/helmrelease.yaml
@@ -23,6 +23,8 @@ spec:
   values:
     expose:
       type: ingress
+      hosts:
+        core: harbor
       tls:
         enabled: true
       ingress:
