--- a/clusters/homelab/kustomizations.yaml
+++ b/clusters/homelab/kustomizations.yaml
@@ -488,3 +488,45 @@ spec:
   dependsOn:
     - name: olm-crds
 
+---
+
+
+
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: datadog-operator
+  namespace: flux-system
+spec:
+  interval: 10m
+  path: ./infra/datadog
+  prune: true
+  wait: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  dependsOn:
+    - name: cert-manager
+
+
+
+---
+
+
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: datadog-agent
+  namespace: flux-system
+spec:
+  interval: 10m
+  path: ./clusters/homelab/agent
+  prune: true
+  wait: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  dependsOn:
+    - name: datadog-operator
+
+
